Fixed extra white space generated by the css on select2 filters

--- a/app/assets/stylesheets/filters.scss
+++ b/app/assets/stylesheets/filters.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.select2-container{
+.content-search{
   width: 100% !important;
 }
 
