--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,7 +5,7 @@
 }
 
 .wrapper {
-  max-width: 2250px;
+  max-width: 1920px;
   min-width: 600px;
   margin: 0 auto;
 }
